--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -1,4 +1,3 @@
-/* resources/css/home.css */
 :root {
   --blue: #0c3b66;
   --blue-soft: #e6f0fa;
@@ -353,6 +352,46 @@ html, body {
   pointer-events: none;
 }
 
+/* ===== Background ===== */
+.floor-bg {
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+  background: #dff1f8;
+  border: 2px solid #2b6f93;
+  border-radius: 8px;
+  z-index: 1;
+  pointer-events: none;
+}
 
-
-/* 1. The Hallways (Background) now Light Blue */
+.floor1-bg {
+  clip-path: polygon(
+    8% 3%,
+    15% 3%,
+    15% 90%, 
+    8% 90%   
+  );
+}
+.floor1-bg-mid {
+  clip-path: polygon(
+    15% 16%,
+    86% 16%,
+    86% 82%,
+    15% 82%
+  );
+}
+.floor1-bg-bottom{
+  clip-path: polygon(
+    15% 82%,
+    96% 82%,
+    96% 93%,
+    15% 93%
+  );
+}
+.floor1-bg-rightpatch{
+  clip-path: polygon(
+    78% 68%,
+    86.8% 68%,
+    86.8% 93%,
+    78% 93%
+  );
+}
