--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -354,7 +354,7 @@ html, body {
 
 /* ===== Background ===== */
 .floor-bg {
-  grid-column: 1 / -1;
+  grid-column: 1 / -1; 
   grid-row: 1 / -1;
   background: #dff1f8;
   border: 2px solid #2b6f93;
@@ -365,33 +365,60 @@ html, body {
 
 .floor1-bg {
   clip-path: polygon(
-    8% 3%,
-    15% 3%,
-    15% 90%, 
-    8% 90%   
+    3% 3%,   
+    15% 3%,  
+    15% 91%, /* +1% */
+    3% 91%   /* +1% */
   );
 }
+
 .floor1-bg-mid {
   clip-path: polygon(
-    15% 16%,
-    86% 16%,
-    86% 82%,
-    15% 82%
+    10% 16%, 
+    86% 16%, 
+    86% 83%, /* +1% */
+    10% 83%  /* +1% */
   );
 }
-.floor1-bg-bottom{
+
+.floor1-bg-bottom {
   clip-path: polygon(
-    15% 82%,
-    96% 82%,
-    96% 94%,
-    15% 94%
+    10% 82%, 
+    96% 82%, 
+    96% 95%, /* +1% */
+    10% 95%  /* +1% */
   );
 }
-.floor1-bg-rightpatch{
+
+.floor1-bg-rightpatch {
   clip-path: polygon(
-    78% 68%,
-    86.8% 68%,
-    86.8% 93%,
-    78% 93%
+    73% 68%, 
+    86.8% 68%, 
+    86.8% 94%, /* +1% */
+    73% 94%  /* +1% */
   );
+}/* =====GREY GUIDE LINE===== */
+
+.path-container {
+    background-color: #9db3c5;
+    width: 18px;               
+    justify-self: center;      
+    border-radius: 0px; /* Makes the ends flat/square */
+    z-index: 2;                
+    position: relative;
+}
+
+/* =====G7854===== */
+
+.asd {
+  width: 100%;
+  height: 100%;
+  margin: 0 !important;
+  background: #ffffff;
+  position: relative;
+  z-index: 2;
+}
+.asd {
+  margin: 1.5px;
+  background-color: #9db3c5;
 }
