--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -439,7 +439,7 @@ html, body {
 }
 
 /* =====G7854===== */
-.asd {
+.horizontal-path {
   width: 100%;
   height: 100%;
   margin: 0 !important;
@@ -447,7 +447,7 @@ html, body {
   position: relative;
   z-index: 2;
 }
-.asd {
+.horizontal-path {
   margin: 1.5px;
   background-color: #9db3c5;
 }
