--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -121,7 +121,7 @@ html, body {
   justify-content: center;
   align-items: flex-start;
   text-align: center;
-  padding: 6px 10px 0;   /* ✅ fixed (no negative padding) */
+  padding: 6px 10px 0;   
   overflow: hidden;
 }
 #roomDescText{
@@ -244,7 +244,7 @@ html, body {
   height: 100%;
   margin: 0 !important;
   background: #ffffff;
-  border: 2px solid #2b6f93;
+  border: 1px solid #6b93a3;
   border-radius: 6px;
   position: relative;
   z-index: 2;
@@ -289,7 +289,7 @@ html, body {
   position: relative;
   overflow: hidden;
   background: #fff;
-  border: 2px solid #2b6f93;
+  border: 1px solid #6b93a3;
   border-radius: 6px;
 }
 
