--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -184,7 +184,7 @@ html, body {
 .legend-rows .legend-cell:nth-child(4) .legend-ico{ transform: scale(1) !important; transform-origin:center; }
 .legend-rows .legend-cell:nth-child(5) .legend-ico{ transform: translateX(-55px) scale(4) !important; transform-origin:left center; }
 .legend-rows .legend-cell:nth-child(6) .legend-ico{ transform: scale(1) !important; transform-origin:center; }
-.legend-rows .legend-cell:nth-child(8) .legend-ico{ transform: scale(1.1) !important; transform-origin:left center; }
+.legend-rows .legend-cell:nth-child(8) .legend-ico{ transform: translateX(-15px) scale(2) !important; transform-origin: left center; }
 
 .map-wrapper {
   background: #ffffff;
@@ -530,3 +530,4 @@ html, body {
   object-fit: contain;
   pointer-events: none;
 }
+
