--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -436,6 +436,56 @@ html, body {
   );
 }
 
+/* ===== Background floor 2===== */
+.floor-bg {
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+  background: #dff1f8;
+  border: 2px solid #2b6f93;
+  border-radius: 8px;
+  z-index: 1;
+  pointer-events: none;
+}
+
+.floor2-bg {
+  /* Left 40% -> 20% | Right stays 15% */
+  clip-path: polygon(
+    20% 5%,
+    15% 5%,
+    15% 91%,
+    20% 91%
+  );
+}
+
+.floor2-bg-mid {
+  /* Left 10% -> 0% | Right stays 86% */
+  clip-path: polygon(
+    2% 4%,
+    88% 5%,
+    93% 83%,
+    2% 83%
+  );
+}
+
+.floor2-bg-bottom {
+  /* Left 0% -> 10% | Right stays 96% */
+  clip-path: polygon(
+    5% 67%,
+    90% 67%,
+    96% 92%,
+    5% 93%
+  );
+}
+
+.floor2-bg-rightpatch {
+  /* Top 1% -> 3% | Bottom stays 42% */
+  clip-path: polygon(
+    1% 3%,   /* Top-Left */
+    90% 3%,  /* Top-Right */
+    90% 42%, /* Bottom-Right */
+    1% 42%   /* Bottom-Left */
+  );
+}
 /* =====GREY GUIDE LINE===== */
 .path-container {
   background-color: #cddfee;
